--- a/infrastructure/env.example
+++ b/infrastructure/env.example
@@ -14,27 +14,27 @@ DOMAIN_NAME=your-domain.com
 SSL_EMAIL=your-email@example.com
 
 # =============================================================================
-# AI BACKEND CONFIGURATION
+# AI CONFIGURATION
 # =============================================================================
 # Google Gemini API Key for AI chat functionality
 GEMINI_API_KEY=your-gemini-api-key-here
 
-# AI Backend service configuration
-AI_BACKEND_PORT=3001
-AI_BACKEND_NODE_ENV=production
-AI_BACKEND_LOG_LEVEL=info
-AI_BACKEND_ENABLE_METRICS=true
-AI_BACKEND_RATE_LIMIT_WINDOW_MS=900000
-AI_BACKEND_RATE_LIMIT_MAX_REQUESTS=100
+# AI service configuration
+AI_PORT=3001
+AI_NODE_ENV=production
+AI_LOG_LEVEL=info
+AI_ENABLE_METRICS=true
+AI_RATE_LIMIT_WINDOW_MS=900000
+AI_RATE_LIMIT_MAX_REQUESTS=100
 
 # Redis URL for quotas (optional in dev; required for per-IP daily limits)
-AI_BACKEND_REDIS_URL=redis://redis:6379/0
+AI_REDIS_URL=redis://redis:6379/0
 
 # Per-IP daily request limit for AI chat (enforced by the backend)
 # Default is 50 if unset
 AI_DAILY_LIMIT=50
 
-# CORS configuration for AI Backend (production recommended)
+# CORS configuration for AI service (production recommended)
 # Comma-separated list of allowed origins (e.g., https://your-domain.com,https://www.your-domain.com)
 CORS_ALLOW_ORIGIN=https://your-domain.com
 # Allowed HTTP methods for CORS preflight and requests
@@ -43,35 +43,35 @@ CORS_ALLOW_METHODS=GET, POST, OPTIONS
 CORS_ALLOW_HEADERS=DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization
 
 # =============================================================================
-# ARACHNE SCRAPER CONFIGURATION
+# SCRAPER CONFIGURATION
 # =============================================================================
-# Redis configuration for Arachne
-ARACHNE_REDIS_ADDR=redis:6379
-ARACHNE_REDIS_DB=0
+# Redis configuration for Scraper
+SCRAPER_REDIS_ADDR=redis:6379
+SCRAPER_REDIS_DB=0
 
 # Scraper settings
-ARACHNE_ENABLE_METRICS=true
-ARACHNE_ENABLE_LOGGING=true
-ARACHNE_LOG_LEVEL=info
-ARACHNE_MAX_CONCURRENT=10
-ARACHNE_REQUEST_TIMEOUT=120s
-ARACHNE_TOTAL_TIMEOUT=180s
-ARACHNE_USE_HEADLESS=true
+SCRAPER_ENABLE_METRICS=true
+SCRAPER_ENABLE_LOGGING=true
+SCRAPER_LOG_LEVEL=info
+SCRAPER_MAX_CONCURRENT=10
+SCRAPER_REQUEST_TIMEOUT=120s
+SCRAPER_TOTAL_TIMEOUT=180s
+SCRAPER_USE_HEADLESS=true
 # Headless browser security flags (defaults are secure)
 # Set to true only for testing scenarios
-ARACHNE_HEADLESS_IGNORE_CERT_ERRORS=false
-ARACHNE_HEADLESS_NO_SANDBOX=false
-ARACHNE_USER_AGENT=Mozilla/5.0 (compatible; PortfolioBot/1.0)
-ARACHNE_RATE_LIMIT=2
-ARACHNE_RATE_LIMIT_WINDOW=1s
+SCRAPER_HEADLESS_IGNORE_CERT_ERRORS=false
+SCRAPER_HEADLESS_NO_SANDBOX=false
+SCRAPER_USER_AGENT=Mozilla/5.0 (compatible; PortfolioBot/1.0)
+SCRAPER_RATE_LIMIT=2
+SCRAPER_RATE_LIMIT_WINDOW=1s
 # Optional API token to protect /api/scrape endpoints (recommended in prod)
-ARACHNE_API_TOKEN=
+SCRAPER_API_TOKEN=
 
 # Development scraper settings (overrides production values)
-ARACHNE_DEV_LOG_LEVEL=debug
-ARACHNE_DEV_MAX_CONCURRENT=3
-ARACHNE_DEV_REQUEST_TIMEOUT=60s
-ARACHNE_DEV_TOTAL_TIMEOUT=90s
+SCRAPER_DEV_LOG_LEVEL=debug
+SCRAPER_DEV_MAX_CONCURRENT=3
+SCRAPER_DEV_REQUEST_TIMEOUT=60s
+SCRAPER_DEV_TOTAL_TIMEOUT=90s
 
 # =============================================================================
 # REDIS CONFIGURATION
@@ -93,7 +93,7 @@ WORKFOLIO_NODE_ENV=production
 WORKFOLIO_PORT=3000
 
 # API base URL for frontend (used by Vite)
-VITE_AI_BACKEND_URL=https://your-domain.com/api/ai
+VITE_AI_URL=https://your-domain.com/api/ai
 
 # Cloudflare Turnstile site key (public). Leave blank for dev fallback.
 VITE_TURNSTILE_SITE_KEY=
@@ -129,10 +129,10 @@ NGINX_MEMORY_LIMIT=256M
 NGINX_CPU_LIMIT=0.5
 WORKFOLIO_MEMORY_LIMIT=512M
 WORKFOLIO_CPU_LIMIT=1.0
-AI_BACKEND_MEMORY_LIMIT=1G
-AI_BACKEND_CPU_LIMIT=1.0
-ARACHNE_MEMORY_LIMIT=2G
-ARACHNE_CPU_LIMIT=1.0
+AI_MEMORY_LIMIT=1G
+AI_CPU_LIMIT=1.0
+SCRAPER_MEMORY_LIMIT=2G
+SCRAPER_CPU_LIMIT=1.0
 REDIS_MEMORY_LIMIT=1G
 REDIS_CPU_LIMIT=1.0
 
@@ -141,9 +141,9 @@ REDIS_CPU_LIMIT=1.0
 # =============================================================================
 # Development environment overrides
 DEV_NODE_ENV=development
-DEV_AI_BACKEND_PORT=3001
+DEV_AI_PORT=3001
 DEV_WORKFOLIO_PORT=3000
-DEV_ARACHNE_PORT=8080
+DEV_SCRAPER_PORT=8080
 
 # =============================================================================
 # LOGGING CONFIGURATION
