--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -12,10 +12,10 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # Arachne UI - Next.js app with basePath=/arachne (port 3002 in dev)
+    # Web Console - Next.js app with basePath=/arachne (port 3002 in dev)
     # Handle both /arachne and /arachne/ - Next.js will handle the routing
-    location ^~ /arachne {
-        proxy_pass http://arachne-ui:3002;
+    location / {
+        proxy_pass http://web:3002;
         proxy_http_version 1.1;
         
         # WebSocket support for Next.js HMR
@@ -32,9 +32,9 @@ server {
         proxy_cache off;
     }
 
-    # Arachne UI static assets (fonts, build output)
+    # Web Console static assets (fonts, build output)
     location /__nextjs_font/ {
-        proxy_pass http://arachne-ui:3002/__nextjs_font/;
+        proxy_pass http://web:3002/__nextjs_font/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -43,7 +43,7 @@ server {
     }
 
     location /_next/ {
-        proxy_pass http://arachne-ui:3002/_next/;
+        proxy_pass http://web:3002/_next/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -54,7 +54,7 @@ server {
     # AI Backend API (strips /api/ai prefix)
     location /api/ai/ {
         rewrite ^/api/ai(/.*)$ $1 break;
-        proxy_pass http://ai-backend:3001;
+        proxy_pass http://ai:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -65,7 +65,7 @@ server {
     # Arachne scraping API (strips /api/scrape prefix)
     location /api/scrape/ {
         rewrite ^/api/scrape(/.*)$ $1 break;
-        proxy_pass http://arachne:8080;
+        proxy_pass http://scraper:8080;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -73,31 +73,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Arachne backend API passthrough (health, metrics, memory endpoints)
+    # Scraper backend API passthrough (health, metrics, memory endpoints)
     location /api/arachne/ {
-        proxy_pass http://arachne:8080/;
+        proxy_pass http://scraper:8080/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Main portfolio (Workfolio) - Vite dev server on port 3000
-    location / {
-        proxy_pass http://workfolio:3000;
-        proxy_http_version 1.1;
-        
-        # WebSocket support for Vite HMR
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Disable buffering for HMR
-        proxy_buffering off;
     }
 }
