--- a/infrastructure/prod/docker-compose.cicd.yml
+++ b/infrastructure/prod/docker-compose.cicd.yml
@@ -30,11 +30,9 @@ services:
       - ./logs/nginx:/var/log/nginx
       - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
     depends_on:
-      workfolio:
+      ai:
         condition: service_healthy
-      ai-backend:
-        condition: service_healthy
-      arachne:
+      scraper:
         condition: service_healthy
     restart: unless-stopped
     command: >
@@ -48,48 +46,23 @@ services:
           memory: 128M
           cpus: "0.25"
 
-  # Workfolio - Production build from GHCR
-  workfolio:
-    image: ${WORKFOLIO_IMAGE:-ghcr.io/kareemsasa3/personal-website/workfolio:latest}
-    container_name: portfolio-workfolio-prod
+  # AI service - Production optimized from GHCR
+  ai:
+    image: ${AI_IMAGE:-ghcr.io/kareemsasa3/personal-website/ai:latest}
+    container_name: portfolio-ai-prod
     environment:
-      - NODE_ENV=${WORKFOLIO_NODE_ENV:-production}
-      - VITE_AI_BACKEND_URL=${VITE_AI_BACKEND_URL:-https://your-domain.com/api/ai}
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: ${WORKFOLIO_MEMORY_LIMIT:-512M}
-          cpus: "${WORKFOLIO_CPU_LIMIT:-1.0}"
-        reservations:
-          memory: 256M
-          cpus: "0.5"
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # AI Backend - Production optimized from GHCR
-  ai-backend:
-    image: ${AI_BACKEND_IMAGE:-ghcr.io/kareemsasa3/personal-website/ai-backend:latest}
-    container_name: portfolio-ai-backend-prod
-    environment:
-      - NODE_ENV=${AI_BACKEND_NODE_ENV:-production}
-      - PORT=${AI_BACKEND_PORT:-3001}
+      - NODE_ENV=${AI_NODE_ENV:-production}
+      - PORT=${AI_PORT:-3001}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - LOG_LEVEL=${AI_BACKEND_LOG_LEVEL:-info}
-      - ENABLE_METRICS=${AI_BACKEND_ENABLE_METRICS:-true}
-      - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
-      - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
+      - LOG_LEVEL=${AI_LOG_LEVEL:-info}
+      - ENABLE_METRICS=${AI_ENABLE_METRICS:-true}
+      - RATE_LIMIT_WINDOW_MS=${AI_RATE_LIMIT_WINDOW_MS:-900000}
+      - RATE_LIMIT_MAX_REQUESTS=${AI_RATE_LIMIT_MAX_REQUESTS:-100}
     restart: unless-stopped
     environment:
-      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
-      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN}
+      - SCRAPER_URL=${SCRAPER_URL:-http://scraper:8080}
+      - SCRAPER_API_TOKEN=${SCRAPER_API_TOKEN}
       - PROFILE_CONTEXT_PATH=/app/profile/profile.md
-    environment:
-      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
-      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN}
     healthcheck:
       test:
         [
@@ -107,8 +80,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: ${AI_BACKEND_MEMORY_LIMIT:-1G}
-          cpus: "${AI_BACKEND_CPU_LIMIT:-1.0}"
+          memory: ${AI_MEMORY_LIMIT:-1G}
+          cpus: "${AI_CPU_LIMIT:-1.0}"
         reservations:
           memory: 512M
           cpus: "0.5"
@@ -118,23 +91,23 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  # Arachne - Production optimized from GHCR
-  arachne:
-    image: ${ARACHNE_IMAGE:-ghcr.io/kareemsasa3/personal-website/arachne:latest}
-    container_name: portfolio-arachne-prod
+  # Scraper - Production optimized from GHCR
+  scraper:
+    image: ${SCRAPER_IMAGE:-ghcr.io/kareemsasa3/personal-website/scraper:latest}
+    container_name: portfolio-scraper-prod
     environment:
-      - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
-      - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
-      - SCRAPER_ENABLE_METRICS=${ARACHNE_ENABLE_METRICS:-true}
-      - SCRAPER_ENABLE_LOGGING=${ARACHNE_ENABLE_LOGGING:-true}
-      - SCRAPER_LOG_LEVEL=${ARACHNE_LOG_LEVEL:-info}
-      - SCRAPER_MAX_CONCURRENT=${ARACHNE_MAX_CONCURRENT:-10}
-      - SCRAPER_REQUEST_TIMEOUT=${ARACHNE_REQUEST_TIMEOUT:-120s}
-      - SCRAPER_TOTAL_TIMEOUT=${ARACHNE_TOTAL_TIMEOUT:-180s}
-      - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
-      - SCRAPER_USER_AGENT=${ARACHNE_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
-      - SCRAPER_RATE_LIMIT=${ARACHNE_RATE_LIMIT:-2}
-      - SCRAPER_RATE_LIMIT_WINDOW=${ARACHNE_RATE_LIMIT_WINDOW:-1s}
+      - SCRAPER_REDIS_ADDR=${SCRAPER_REDIS_ADDR:-redis:6379}
+      - SCRAPER_REDIS_DB=${SCRAPER_REDIS_DB:-0}
+      - SCRAPER_ENABLE_METRICS=${SCRAPER_ENABLE_METRICS:-true}
+      - SCRAPER_ENABLE_LOGGING=${SCRAPER_ENABLE_LOGGING:-true}
+      - SCRAPER_LOG_LEVEL=${SCRAPER_LOG_LEVEL:-info}
+      - SCRAPER_MAX_CONCURRENT=${SCRAPER_MAX_CONCURRENT:-10}
+      - SCRAPER_REQUEST_TIMEOUT=${SCRAPER_REQUEST_TIMEOUT:-120s}
+      - SCRAPER_TOTAL_TIMEOUT=${SCRAPER_TOTAL_TIMEOUT:-180s}
+      - SCRAPER_USE_HEADLESS=${SCRAPER_USE_HEADLESS:-true}
+      - SCRAPER_USER_AGENT=${SCRAPER_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
+      - SCRAPER_RATE_LIMIT=${SCRAPER_RATE_LIMIT:-2}
+      - SCRAPER_RATE_LIMIT_WINDOW=${SCRAPER_RATE_LIMIT_WINDOW:-1s}
     depends_on:
       redis:
         condition: service_healthy
@@ -156,7 +129,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: ${ARACHNE_MEMORY_LIMIT:-2G}
+          memory: ${SCRAPER_MEMORY_LIMIT:-2G}
           cpus: "0.8"
         reservations:
           memory: 1G
