--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -7,100 +7,6 @@ on:
     branches: [main, master]
 
 jobs:
-  build-workfolio:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository (with submodules)
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
-          # Use SSH for submodules
-          ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
-          ssh-strict: true
-
-      - name: Verify submodule checkout
-        run: |
-          git submodule status || true
-          git submodule sync --recursive
-          git submodule update --init --recursive
-          ls -la
-          ls -la services/workfolio
-          test -f services/workfolio/Dockerfile && echo "Found services/workfolio/Dockerfile" || (echo "Missing services/workfolio/Dockerfile" && exit 1)
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GHCR (main/master only)
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build Workfolio image (local, PRs only)
-        if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
-        uses: docker/build-push-action@v5
-        with:
-          context: ./services/workfolio
-          load: true
-          push: false
-          tags: |
-            workfolio:ci
-          build-args: |
-            VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }}
-            VITE_AI_URL=/api/ai
-
-      - name: Build and push Workfolio image (GHCR, main/master only)
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-        uses: docker/build-push-action@v5
-        with:
-          context: ./services/workfolio
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}/workfolio:${{ github.sha }}
-            ghcr.io/${{ github.repository }}/workfolio:${{ github.ref_name }}
-            ghcr.io/${{ github.repository }}/workfolio:latest
-          build-args: |
-            VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }}
-            VITE_AI_URL=/api/ai
-
-      - name: Scan Workfolio image with Trivy (local)
-        if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          scan-type: image
-          image-ref: workfolio:ci
-          format: table
-          severity: CRITICAL
-          exit-code: 1
-
-      - name: Scan Workfolio image with Trivy (remote)
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          scan-type: image
-          image-ref: ghcr.io/${{ github.repository }}/workfolio:${{ github.sha }}
-          format: table
-          severity: CRITICAL
-          exit-code: 1
-
-      # Alternative: build from within the submodule directory
-      # - name: Build (working-directory: services/workfolio)
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: ./services/workfolio
-      #     file: ./services/workfolio/Dockerfile
-      #     load: true
-      #     tags: workfolio:ci
-      #     build-args: |
-      #       VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }}
-#       VITE_AI_URL=${{ secrets.VITE_AI_URL }}
-
   build-ai:
     runs-on: ubuntu-latest
     permissions:
@@ -260,7 +166,7 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
           ssh-strict: true
-      - name: Verify submodule checkout (web)
+      - name: Verify checkout (web)
         run: |
           git submodule status || true
           git submodule sync --recursive
