--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+          token: ${{ secrets.SUBMODULE_TOKEN }}
           ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
           ssh-strict: true
       - name: Verify submodule checkout (ai)
@@ -93,6 +94,7 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
           ssh-strict: true
+          token: ${{ secrets.SUBMODULE_TOKEN }}
       - name: Verify submodule checkout (scraper)
         run: |
           git submodule status || true
@@ -166,6 +168,7 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
           ssh-strict: true
+          token: ${{ secrets.SUBMODULE_TOKEN }}
       - name: Verify checkout (web)
         run: |
           git submodule status || true
