--- a/infrastructure/env.example
+++ b/infrastructure/env.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# PORTFOLIO ENVIRONMENT CONFIGURATION
+# ARACHNE ENVIRONMENT CONFIGURATION
 # =============================================================================
 # Copy this file to .env and update the values according to your setup
 # cp env.example .env
@@ -61,7 +61,7 @@ SCRAPER_USE_HEADLESS=true
 # Set to true only for testing scenarios
 SCRAPER_HEADLESS_IGNORE_CERT_ERRORS=false
 SCRAPER_HEADLESS_NO_SANDBOX=false
-SCRAPER_USER_AGENT=Mozilla/5.0 (compatible; PortfolioBot/1.0)
+SCRAPER_USER_AGENT=Mozilla/5.0 (compatible; ArachneBot/1.0)
 SCRAPER_RATE_LIMIT=2
 SCRAPER_RATE_LIMIT_WINDOW=1s
 # Optional API token to protect /api/scrape endpoints (recommended in prod)
@@ -86,13 +86,9 @@ REDIS_COMMANDER_ENABLED=true
 REDIS_COMMANDER_PORT=8081
 
 # =============================================================================
-# WORKFOLIO FRONTEND CONFIGURATION
+# WEB FRONTEND CONFIGURATION
 # =============================================================================
-# Frontend environment
-WORKFOLIO_NODE_ENV=production
-WORKFOLIO_PORT=3000
-
-# API base URL for frontend (used by Vite)
+# API base URL for frontend (used by Next.js)
 VITE_AI_URL=https://your-domain.com/api/ai
 
 # Cloudflare Turnstile site key (public). Leave blank for dev fallback.
@@ -121,14 +117,14 @@ SSL_KEY_PATH=/etc/nginx/ssl/key.pem
 # DOCKER CONFIGURATION
 # =============================================================================
 # Docker network configuration
-DOCKER_NETWORK_NAME=portfolio-network
+DOCKER_NETWORK_NAME=arachne-network
 DOCKER_NETWORK_SUBNET=172.20.0.0/16
 
 # Container resource limits
 NGINX_MEMORY_LIMIT=256M
 NGINX_CPU_LIMIT=0.5
-WORKFOLIO_MEMORY_LIMIT=512M
-WORKFOLIO_CPU_LIMIT=1.0
+WEB_MEMORY_LIMIT=512M
+WEB_CPU_LIMIT=1.0
 AI_MEMORY_LIMIT=1G
 AI_CPU_LIMIT=1.0
 SCRAPER_MEMORY_LIMIT=2G
@@ -142,7 +138,6 @@ REDIS_CPU_LIMIT=1.0
 # Development environment overrides
 DEV_NODE_ENV=development
 DEV_AI_PORT=3001
-DEV_WORKFOLIO_PORT=3000
 DEV_SCRAPER_PORT=8080
 
 # =============================================================================
