--- a/.github/actions/ssh-deploy/action.yml
+++ b/.github/actions/ssh-deploy/action.yml
@@ -152,7 +152,7 @@ runs:
           export ARACHNE_CPU_LIMIT="1.0"
         fi
 
-        docker network create portfolio-network-prod >/dev/null 2>&1 || true
+        docker network create arachne-network-prod >/dev/null 2>&1 || true
         # Override to force images (and null-out any build) so server never builds locally
         cat > /tmp/compose.images.override.yml << 'IMG'
         services:
@@ -169,18 +169,18 @@ runs:
 
         cat > /tmp/compose.network.override.yml << 'OVR'
         networks:
-          portfolio-network-prod:
+          arachne-network-prod:
             external: true
-            name: portfolio-network-prod
+            name: arachne-network-prod
         OVR
 
         if command -v docker-compose >/dev/null 2>&1; then COMPOSE_CMD="docker-compose"; else COMPOSE_CMD="docker compose"; fi
         # Bring stack down with same overrides to prevent name conflicts and stale containers
         $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml down --remove-orphans || true
         # Extra safety: remove any lingering conflicting containers by explicit names
-        docker rm -f portfolio-redis-prod portfolio-ai-prod portfolio-web-prod portfolio-scraper-prod >/dev/null 2>&1 || true
-        # And remove any container matching portfolio-*-prod just in case
-        CONFLICTING_CONTAINERS=$(docker ps -aq --filter name='^/portfolio-.*-prod$' || true)
+        docker rm -f arachne-redis-prod arachne-ai-prod arachne-web-prod arachne-scraper-prod >/dev/null 2>&1 || true
+        # And remove any container matching arachne-*-prod just in case
+        CONFLICTING_CONTAINERS=$(docker ps -aq --filter name='^/arachne-.*-prod$' || true)
         if [ -n "$CONFLICTING_CONTAINERS" ]; then
           echo "Removing lingering containers: $CONFLICTING_CONTAINERS"
           docker rm -f $CONFLICTING_CONTAINERS >/dev/null 2>&1 || true
