--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -9,7 +9,7 @@
 services:
   # AI Backend - Node.js with nodemon hot reload
   ai:
-    container_name: portfolio-ai-dev
+    container_name: arachne-ai-dev
     build:
       context: ../services/ai
       dockerfile: Dockerfile.dev
@@ -30,7 +30,7 @@ services:
 
   # Arachne - Go with Air hot reload
   scraper:
-    container_name: portfolio-scraper-dev
+    container_name: arachne-scraper-dev
     build:
       context: ../services/scraper
       dockerfile: ../../infrastructure/dev/arachne.Dockerfile
@@ -57,7 +57,7 @@ services:
 
   # Arachne UI - Next.js dev server with Turbopack
   web:
-    container_name: portfolio-web-dev
+    container_name: arachne-web-dev
     build:
       context: ../services/web
       dockerfile: Dockerfile.dev
@@ -85,7 +85,7 @@ services:
 
   # Nginx - reverse proxy for all services
   nginx:
-    container_name: portfolio-nginx-dev
+    container_name: arachne-nginx-dev
     volumes:
       # Paths relative to CWD (infrastructure/), not to this file
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
