--- a/infrastructure/docker-compose.cicd.yml
+++ b/infrastructure/docker-compose.cicd.yml
@@ -2,7 +2,7 @@ services:
   # Nginx reverse proxy
   nginx:
     image: nginx:alpine
-    container_name: portfolio-nginx
+    container_name: arachne-nginx
     environment:
       - DOMAIN_NAME=${DOMAIN_NAME}
     ports:
@@ -22,12 +22,12 @@ services:
     command: >
       /bin/sh -c "sed 's/__DOMAIN_NAME__/'\"$DOMAIN_NAME\"'/g' /tmp/default.conf.template > /tmp/default.conf && nginx -g 'daemon off;'"
     networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
+      - ${DOCKER_NETWORK_NAME:-arachne-network}
 
   # Web Console - Scraper console
   web:
     image: ${WEB_IMAGE:-ghcr.io/your-username/personal-website/web:latest}
-    container_name: portfolio-web
+    container_name: arachne-web
     environment:
       - NODE_ENV=${WEB_NODE_ENV:-production}
       - PORT=${WEB_PORT:-3000}
@@ -39,12 +39,12 @@ services:
       - scraper
     restart: unless-stopped
     networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
+      - ${DOCKER_NETWORK_NAME:-arachne-network}
 
   # AI service - AI microservice
   ai:
     image: ${AI_IMAGE:-ghcr.io/your-username/personal-website/ai:latest}
-    container_name: portfolio-ai
+    container_name: arachne-ai
     environment:
       - NODE_ENV=${AI_NODE_ENV:-production}
       - PORT=${AI_PORT:-3001}
@@ -58,7 +58,7 @@ services:
       - PROFILE_CONTEXT_PATH=/app/profile/profile.md
     restart: unless-stopped
     networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
+      - ${DOCKER_NETWORK_NAME:-arachne-network}
     healthcheck:
       test:
         [
@@ -77,7 +77,7 @@ services:
   # Scraper - Web scraping service
   scraper:
     image: ${SCRAPER_IMAGE:-ghcr.io/your-username/personal-website/scraper:latest}
-    container_name: portfolio-scraper
+    container_name: arachne-scraper
     environment:
       - SCRAPER_REDIS_ADDR=${SCRAPER_REDIS_ADDR:-redis:6379}
       - SCRAPER_REDIS_DB=${SCRAPER_REDIS_DB:-0}
@@ -88,7 +88,7 @@ services:
       - SCRAPER_REQUEST_TIMEOUT=${SCRAPER_REQUEST_TIMEOUT:-120s}
       - SCRAPER_TOTAL_TIMEOUT=${SCRAPER_TOTAL_TIMEOUT:-180s}
       - SCRAPER_USE_HEADLESS=${SCRAPER_USE_HEADLESS:-true}
-      - SCRAPER_USER_AGENT=${SCRAPER_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
+      - SCRAPER_USER_AGENT=${SCRAPER_USER_AGENT:-Mozilla/5.0 (compatible; ArachneBot/1.0)}
       - SCRAPER_RATE_LIMIT=${SCRAPER_RATE_LIMIT:-2}
       - SCRAPER_RATE_LIMIT_WINDOW=${SCRAPER_RATE_LIMIT_WINDOW:-1s}
     depends_on:
@@ -96,7 +96,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
+      - ${DOCKER_NETWORK_NAME:-arachne-network}
     healthcheck:
       test:
         [
@@ -115,13 +115,13 @@ services:
   # Redis - Required by Arachne for job storage
   redis:
     image: redis:7-alpine
-    container_name: portfolio-redis
+    container_name: arachne-redis
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes --maxmemory ${REDIS_MAX_MEMORY:-512mb} --maxmemory-policy ${REDIS_MAX_MEMORY_POLICY:-allkeys-lru}
     restart: unless-stopped
     networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
+      - ${DOCKER_NETWORK_NAME:-arachne-network}
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
@@ -131,17 +131,17 @@ services:
   # Redis Commander - Optional UI for Redis management
   redis-commander:
     image: rediscommander/redis-commander:latest
-    container_name: portfolio-redis-commander
+    container_name: arachne-redis-commander
     environment:
       - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
     depends_on:
       - redis
     restart: unless-stopped
     networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
+      - ${DOCKER_NETWORK_NAME:-arachne-network}
 
 networks:
-  portfolio-network:
+  arachne-network:
     driver: bridge
 
 volumes:
