--- a/infrastructure/env.example
+++ b/infrastructure/env.example
@@ -19,6 +19,10 @@ SSL_EMAIL=your-email@example.com
 # Google Gemini API Key for AI chat functionality
 GEMINI_API_KEY=your-gemini-api-key-here
 
+# SERP/Brave search provider API keys (optional, enable web search)
+SERPAPI_API_KEY=
+BRAVE_SEARCH_API_KEY=
+
 # AI service configuration
 AI_PORT=3001
 AI_NODE_ENV=production
