--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -32,6 +32,13 @@ server {
         proxy_cache off;
     }
 
+    # Ignore stray asset requests from scraped content (e.g., relative wp-content URLs)
+    location ^~ /wp-content/ {
+        access_log off;
+        log_not_found off;
+        return 204;
+    }
+
     # Web Console static assets (fonts, build output)
     location /__nextjs_font/ {
         proxy_pass http://web:3002/__nextjs_font/;
